*Many other minor changes.

v0.2.2
*Added AceHook and lib-st libraries.
*Fixed a typo in one of the tips.
*Many other minor changes.

v0.2.1
*Finally fixed the bug where selectionlists (such as the one used for adding or removing items to Auctioning groups / categories) were only displaying the first 4 items under some circumstances.
*Updated the TOC for patch 4.1

v0.2
*Added TSM tips to the status bar of the main TSM window. The tip will change everytime the TSM window is open.
*Added a ton of support code for the AuctionDB and Destroying modules.
*Cleaned up the unused slash command code as well as a bunch of other parts of the code.
*Updated the credits.
*Many other changes that aren't evident to the user but better the addon's code as a whole.

v0.1.7
*Removed the slash command line from the minimap button tooltip as it was causing some errors.
*Tooltip functions can now access stack size info.
*Cleaned up the TSMMacroButton code and fixed some bugs.

v0.1.6
*SelectionLists should now clear the selected row on release.
*Added VersionKey APIs.
*Removed a few extra libraries from the TOC file / addon folder.
*Turned on no-lib creation.
*Updated the credits.
*Cleaned up some of the code.

v0.1.5
*Fixed a bug with the main TSM window on non-english clients.
*Minor improvements to the GUI functions.
*Added an option to the "Status" page for hiding the minimap icon.

v0.1.4
*Fixed some minor bugs with two of the TSMAPI functions.
*This update is required for using the latest version of Crafting

v0.1.3
*Adjusted the sidebar so it should resize more in order to not be blocked by right action bars.
*Fixed a bug with the selectionlists in auctioning sometimes only showing 4 items.
*Updated the included TSM Guidebook pdf.

v0.1.2
*The sidebar frame should no longer go off the screen.
*Added another popup to help new users.

v0.1.1
*Should be way more obvious when no modules are installed.

v0.1
*First Beta Release!