@@ -1,12 +1,9 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description"
-        content="TradeSkillMaster: Revived for Project Ascension (3.3.5a) - Comprehensive auction house, crafting, and gold-making addon suite">
-    <title>TradeSkillMaster: Revived — Project Ascension</title>
+    <title>TradeSkillMaster - Documentation</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
@@ -23,28 +20,21 @@
             --accent-green: #3fb950;
             --border-color: #30363d;
         }
-
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-        }
-
+        * { margin: 0; padding: 0; box-sizing: border-box; }
         body {
             font-family: 'Inter', -apple-system, BlinkMacSystemFont, sans-serif;
             background: var(--bg-primary);
             color: var(--text-primary);
-            line-height: 1.6;
             min-height: 100vh;
+            display: flex;
+            flex-direction: column;
         }
-
         .hero {
             background: linear-gradient(135deg, var(--bg-secondary) 0%, var(--bg-primary) 50%, #1a1625 100%);
             padding: 4rem 2rem;
             text-align: center;
             border-bottom: 1px solid var(--border-color);
         }
-
         .hero h1 {
             font-size: 2.5rem;
             font-weight: 700;
@@ -54,13 +44,6 @@
             -webkit-text-fill-color: transparent;
             background-clip: text;
         }
-
-        .hero .subtitle {
-            font-size: 1.1rem;
-            color: var(--text-secondary);
-            margin-bottom: 1.5rem;
-        }
-
         .badges {
             display: flex;
             gap: 0.5rem;
@@ -68,171 +51,27 @@
             flex-wrap: wrap;
             margin-bottom: 2rem;
         }
-
         .badge {
             padding: 0.35rem 0.75rem;
             border-radius: 20px;
             font-size: 0.8rem;
             font-weight: 500;
         }
-
-        .badge-version {
-            background: var(--accent-blue);
-            color: #fff;
-        }
-
-        .badge-base {
-            background: var(--accent-green);
-            color: #fff;
-        }
-
-        .badge-wow {
-            background: #f97316;
-            color: #fff;
-        }
-
-        .badge-ascension {
-            background: var(--accent-purple);
-            color: #fff;
-        }
-
-        .cta-buttons {
-            display: flex;
-            gap: 1rem;
-            justify-content: center;
-            flex-wrap: wrap;
-        }
-
-        .btn {
-            padding: 0.75rem 1.5rem;
-            border-radius: 8px;
-            text-decoration: none;
-            font-weight: 600;
-            transition: all 0.2s ease;
-        }
-
-        .btn-primary {
-            background: var(--accent-gold);
-            color: #000;
-        }
-
-        .btn-primary:hover {
-            background: #ffd700;
-            transform: translateY(-2px);
-        }
-
-        .btn-secondary {
-            background: var(--bg-tertiary);
-            color: var(--text-primary);
-            border: 1px solid var(--border-color);
-        }
-
-        .btn-secondary:hover {
-            background: var(--border-color);
-        }
-
+        .badge-version { background: var(--accent-blue); color: #fff; }
+        .badge-addon { background: var(--accent-purple); color: #fff; }
         .container {
             max-width: 1000px;
             margin: 0 auto;
             padding: 3rem 2rem;
+            flex: 1;
         }
-
-        section {
-            margin-bottom: 3rem;
-        }
-
+        section { margin-bottom: 2rem; }
         h2 {
             font-size: 1.5rem;
             margin-bottom: 1rem;
             color: var(--accent-gold);
-            display: flex;
-            align-items: center;
-            gap: 0.5rem;
         }
-
-        .features-grid {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
-            gap: 1rem;
-        }
-
-        .feature-card {
-            background: var(--bg-secondary);
-            border: 1px solid var(--border-color);
-            border-radius: 12px;
-            padding: 1.25rem;
-            transition: border-color 0.2s ease;
-        }
-
-        .feature-card:hover {
-            border-color: var(--accent-gold);
-        }
-
-        .feature-card h3 {
-            font-size: 1rem;
-            margin-bottom: 0.5rem;
-            color: var(--text-primary);
-        }
-
-        .feature-card p {
-            font-size: 0.9rem;
-            color: var(--text-secondary);
-        }
-
-        .modules-table {
-            width: 100%;
-            border-collapse: collapse;
-            background: var(--bg-secondary);
-            border-radius: 12px;
-            overflow: hidden;
-            border: 1px solid var(--border-color);
-        }
-
-        .modules-table th,
-        .modules-table td {
-            padding: 0.75rem 1rem;
-            text-align: left;
-            border-bottom: 1px solid var(--border-color);
-        }
-
-        .modules-table th {
-            background: var(--bg-tertiary);
-            font-weight: 600;
-            color: var(--accent-gold);
-        }
-
-        .modules-table tr:last-child td {
-            border-bottom: none;
-        }
-
-        .modules-table tr:hover {
-            background: var(--bg-tertiary);
-        }
-
-        .install-steps {
-            background: var(--bg-secondary);
-            border: 1px solid var(--border-color);
-            border-radius: 12px;
-            padding: 1.5rem;
-        }
-
-        .install-steps ol {
-            margin-left: 1.5rem;
-        }
-
-        .install-steps li {
-            margin-bottom: 0.5rem;
-            color: var(--text-secondary);
-        }
-
-        .install-steps code {
-            background: var(--bg-tertiary);
-            padding: 0.2rem 0.5rem;
-            border-radius: 4px;
-            font-family: 'Consolas', monospace;
-            color: var(--accent-blue);
-        }
-
+        p { color: var(--text-secondary); line-height: 1.6; }
         footer {
             text-align: center;
             padding: 2rem;
@@ -240,158 +79,24 @@
             color: var(--text-secondary);
             font-size: 0.9rem;
         }
-
-        footer a {
-            color: var(--accent-blue);
-            text-decoration: none;
-        }
-
-        footer a:hover {
-            text-decoration: underline;
-        }
-
-        @media (max-width: 600px) {
-            .hero h1 {
-                font-size: 1.8rem;
-            }
-
-            .hero {
-                padding: 2rem 1rem;
-            }
-
-            .container {
-                padding: 2rem 1rem;
-            }
-        }
     </style>
 </head>
-
 <body>
     <header class="hero">
-        <h1>TradeSkillMaster: Revived</h1>
-        <p class="subtitle">Comprehensive auction house, crafting, and gold-making addon suite for Project Ascension</p>
+        <h1>TradeSkillMaster</h1>
         <div class="badges">
-            <span class="badge badge-version">Rev701</span>
-            <span class="badge badge-base">Base v2.8.3</span>
-            <span class="badge badge-wow">WoW 3.3.5a</span>
-            <span class="badge badge-ascension">Project Ascension</span>
-        </div>
-        <div class="cta-buttons">
-            <a href="https://github.com/Xurkon/PA-TradeSkillMaster/releases" class="btn btn-primary">⬇ Download</a>
-            <a href="https://github.com/Xurkon/PA-TradeSkillMaster" class="btn btn-secondary">📂 View Source</a>
+            <span class="badge badge-addon">WoW Addon</span>
+            <span class="badge badge-version">v1.0.0</span>
         </div>
     </header>
-
     <main class="container">
         <section>
-            <h2>✨ Key Features</h2>
-            <div class="features-grid">
-                <div class="feature-card">
-                    <h3>🔧 Fixed Market Values</h3>
-                    <p>Prices are now calculated correctly — previously broken in all prior TSM versions.</p>
-                </div>
-                <div class="feature-card">
-                    <h3>⚡ 5x Faster Scanning</h3>
-                    <p>Rewritten auction scanning algorithm uses &lt;5% memory of the old version.</p>
-                </div>
-                <div class="feature-card">
-                    <h3>🛒 Shopping Reliability</h3>
-                    <p>Tolerates AH desync, prevents "must meet minimum bid" errors.</p>
-                </div>
-                <div class="feature-card">
-                    <h3>🏦 Ascension Banks</h3>
-                    <p>Tracks items in Personal Bank and Realm Bank with custom events.</p>
-                </div>
-                <div class="feature-card">
-                    <h3>🎨 Custom Fonts</h3>
-                    <p>SharedMedia support for customizable fonts via LibSharedMedia.</p>
-                </div>
-                <div class="feature-card">
-                    <h3>⏱️ Time Estimates</h3>
-                    <p>Full Scan shows elapsed / estimated total time remaining.</p>
-                </div>
-            </div>
-        </section>
-
-        <section>
-            <h2>📦 Included Modules</h2>
-            <table class="modules-table">
-                <thead>
-                    <tr>
-                        <th>Module</th>
-                        <th>Description</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <td><strong>TSM Core</strong></td>
-                        <td>Core addon with API, utilities, and settings</td>
-                    </tr>
-                    <tr>
-                        <td><strong>Accounting</strong></td>
-                        <td>Track gold income, expenses, and sales history</td>
-                    </tr>
-                    <tr>
-                        <td><strong>AuctionDB</strong></td>
-                        <td>Auction house price database and market values</td>
-                    </tr>
-                    <tr>
-                        <td><strong>Auctioning</strong></td>
-                        <td>Automated posting, canceling, and undercutting</td>
-                    </tr>
-                    <tr>
-                        <td><strong>Crafting</strong></td>
-                        <td>Crafting queue, cost calculations, and profit analysis</td>
-                    </tr>
-                    <tr>
-                        <td><strong>Destroying</strong></td>
-                        <td>Milling, prospecting, and disenchanting automation</td>
-                    </tr>
-                    <tr>
-                        <td><strong>ItemTracker</strong></td>
-                        <td>Track inventory across all characters and banks</td>
-                    </tr>
-                    <tr>
-                        <td><strong>Mailing</strong></td>
-                        <td>Automated mailing operations</td>
-                    </tr>
-                    <tr>
-                        <td><strong>Shopping</strong></td>
-                        <td>Shopping lists, sniper, and deal finding</td>
-                    </tr>
-                    <tr>
-                        <td><strong>Warehousing</strong></td>
-                        <td>Bank and guild bank inventory management</td>
-                    </tr>
-                </tbody>
-            </table>
-        </section>
-
-        <section>
-            <h2>📥 Installation</h2>
-            <div class="install-steps">
-                <ol>
-                    <li>Download the <a href="https://github.com/Xurkon/PA-TradeSkillMaster/releases">latest release</a>
-                    </li>
-                    <li>Extract all folders to <code>Interface/AddOns/</code></li>
-                    <li>Restart WoW or type <code>/reload</code></li>
-                </ol>
-            </div>
+            <h2>Overview</h2>
+            <p>Documentation for the <strong>TradeSkillMaster</strong> addon for World of Warcraft 3.3.5a (Project Ascension).</p>
         </section>
     </main>
-
     <footer>
-        <p>
-            Original Authors: Sapu94, Bart39 •
-            TSM Revived: Gnomezilla, XiusTV •
-            Custom Ascension Changes: <a href="https://github.com/Xurkon">Xurkon</a>
-        </p>
-        <p style="margin-top: 0.5rem;">
-            <a href="https://github.com/Xurkon/PA-TradeSkillMaster">GitHub</a> •
-            <a href="https://github.com/Xurkon/PA-TradeSkillMaster/blob/main/ChangeLog.txt">Changelog</a> •
-            <a href="https://github.com/Xurkon/PA-TradeSkillMaster/blob/main/LICENSE">License</a>
-        </p>
+        <p>Generated by Antigravity - your AI assistant.</p>
     </footer>
 </body>
-
 </html>
